--- a/03.API-EXAMPLE.md
+++ b/03.API-EXAMPLE.md
@@ -644,14 +644,21 @@ print_value (const jerry_value_t jsvalue)
   /* String value */
   else if (jerry_value_is_string (value))
   {
+    jerry_char_t str_buf_p[256];
+
     /* Determining required buffer size */
     jerry_size_t req_sz = jerry_get_string_size (value);
-    jerry_char_t str_buf_p[req_sz + 1];
 
-    jerry_string_to_char_buffer (value, str_buf_p, req_sz);
-    str_buf_p[req_sz] = '\0';
-
-    printf ("%s", (const char *) str_buf_p);
+    if (req_sz <= 255)
+    {
+      jerry_string_to_char_buffer (value, str_buf_p, req_sz);
+      str_buf_p[req_sz] = '\0';
+      printf ("%s", (const char *) str_buf_p);
+    }
+    else
+    {
+      printf ("error: buffer isn't big enough");
+    }
   }
   /* Object reference */
   else if (jerry_value_is_object (value))
@@ -731,14 +738,21 @@ print_value (const jerry_value_t jsvalue)
   /* String value */
   else if (jerry_value_is_string (value))
   {
+    jerry_char_t str_buf_p[256];
+
     /* Determining required buffer size */
     jerry_size_t req_sz = jerry_get_string_size (value);
-    jerry_char_t str_buf_p[req_sz + 1];
 
-    jerry_string_to_char_buffer (value, str_buf_p, req_sz);
-    str_buf_p[req_sz] = '\0';
-
-    printf ("%s", (const char *) str_buf_p);
+    if (req_sz <= 255)
+    {
+      jerry_string_to_char_buffer (value, str_buf_p, req_sz);
+      str_buf_p[req_sz] = '\0';
+      printf ("%s", (const char *) str_buf_p);
+    }
+    else
+    {
+      printf ("error: buffer isn't big enough");
+    }
   }
   /* Object reference */
   else if (jerry_value_is_object (value))
@@ -747,7 +761,6 @@ print_value (const jerry_value_t jsvalue)
   }
 
   printf ("\n");
-
   jerry_release_value (value);
 }
 
