--- a/01.CONFIGURATION.md
+++ b/01.CONFIGURATION.md
@@ -204,7 +204,7 @@ The default value is 512.
 |---------|----------------------------------------------|
 | C:      | `-DJERRY_GLOBAL_HEAP_SIZE=(int)`             |
 | CMake:  | `--DJERRY_GLOBAL_HEAP_SIZE=(int)`            |
-| Python: | `--heap-size=(int)`                          |
+| Python: | `--mem-heap=(int)`                           |
 
 ### Garbage collection limit
 
