Add missing parameter description for jerry_get_resource_name
Also some typos are fixed.

JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -7556,7 +7556,7 @@ main (void)
 - [jerry_create_external_function](#jerry_create_external_function)
 
 
-## jerry_get_resurce_name
+## jerry_get_resource_name
 
 **Summary**
 
@@ -7575,9 +7575,9 @@ is no longer needed.
 
 ```c
 jerry_value_t
-jerry_get_resurce_name (void);
+jerry_get_resource_name (jerry_value_t value);
 ```
-
+- `value` - api value to obtain the resource name from
 - return string value constructed from
   - the currently executed function object's resource name, if the given value is undefined
   - resource name of the function object, if the given value is a function object
